--- a/Plugins/Obituary/CHANGELOG.TXT
+++ b/Plugins/Obituary/CHANGELOG.TXT
@@ -1,4 +1,5 @@
 V1.1 - 12/27/2010
+-Added patch to fix Minecraft bug wherein player is kicked or crashes if they die while in a vehicle.
 -Added fire_tick specific message.
 -Added suffocation death message.
 -Added mob-specific death messages.
