--- a/Plugins/Obituary/CHANGELOG.TXT
+++ b/Plugins/Obituary/CHANGELOG.TXT
@@ -1,3 +1,7 @@
+v1.4 - 01/26/2011
+-Updated for compatibility with hMod build 134. This will likely be the last major version
+built for hMod.
+
 v1.3 - 01/15/2011
 -Added "void" death message.
 -Consolidated both data files into the new Obituary.properties.
