--- a/Plugins/WirelessPower/CHANGELOG.TXT
+++ b/Plugins/WirelessPower/CHANGELOG.TXT
@@ -1,3 +1,7 @@
+v1.2 - 01/26/2011
+-Updated for compatibility with hMod build 134. This will likely be the last major version
+built for hMod.
+
 V1.12
 -Fixed bug wherein some configuration options were not being saved properly.
 -Fixed bug wherein integrity check was still not completed when the plugin was
